--- a/genindex.html
+++ b/genindex.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Index &mdash; absfuyu 3.1.0 documentation</title>
+  <title>Index &mdash; absfuyu 3.1.1 documentation</title>
       <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
       <link rel="stylesheet" href="_static/css/theme.css" type="text/css" />
   <!--[if lt IE 9]>
@@ -12,7 +12,7 @@
   
         <script src="_static/jquery.js?v=5d32c60e"></script>
         <script src="_static/_sphinx_javascript_frameworks_compat.js?v=2cd50e6c"></script>
-        <script src="_static/documentation_options.js?v=dd1205ac"></script>
+        <script src="_static/documentation_options.js?v=796a81b5"></script>
         <script src="_static/doctools.js?v=888ff710"></script>
         <script src="_static/sphinx_highlight.js?v=dc90522c"></script>
     <script src="_static/js/theme.js"></script>
@@ -32,7 +32,7 @@
             absfuyu
           </a>
               <div class="version">
-                3.1.0
+                3.1.1
               </div>
 <div role="search">
   <form id="rtd-search-form" class="wy-form" action="search.html" method="get">
@@ -90,6 +90,7 @@
  | <a href="#N"><strong>N</strong></a>
  | <a href="#O"><strong>O</strong></a>
  | <a href="#P"><strong>P</strong></a>
+ | <a href="#Q"><strong>Q</strong></a>
  | <a href="#R"><strong>R</strong></a>
  | <a href="#S"><strong>S</strong></a>
  | <a href="#T"><strong>T</strong></a>
@@ -525,6 +526,8 @@
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="absfuyu.extensions.extra.html#absfuyu.extensions.extra.data_analysis.DADF">DADF (class in absfuyu.extensions.extra.data_analysis)</a>
+</li>
+      <li><a href="absfuyu.extensions.extra.html#absfuyu.extensions.extra.data_analysis.DataAnalystDataFrame.dadf_help">dadf_help() (absfuyu.extensions.extra.data_analysis.DataAnalystDataFrame static method)</a>
 </li>
       <li><a href="absfuyu.html#absfuyu.core.CLITextColor.DARK_RED">DARK_RED (absfuyu.core.CLITextColor attribute)</a>
 </li>
@@ -1014,6 +1017,14 @@
       <li><a href="absfuyu.extensions.html#absfuyu.extensions.beautiful.print">print() (in module absfuyu.extensions.beautiful)</a>
 </li>
       <li><a href="absfuyu.general.html#absfuyu.general.generator.Charset.PRODUCT_KEY">PRODUCT_KEY (absfuyu.general.generator.Charset attribute)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="Q">Q</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="absfuyu.extensions.extra.html#absfuyu.extensions.extra.data_analysis.DataAnalystDataFrame.qdescribe">qdescribe() (absfuyu.extensions.extra.data_analysis.DataAnalystDataFrame method)</a>
 </li>
   </ul></td>
 </tr></table>
