--- a/genindex.html
+++ b/genindex.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Index &mdash; absfuyu 3.1.1 documentation</title>
+  <title>Index &mdash; absfuyu 3.2.0 documentation</title>
       <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
       <link rel="stylesheet" href="_static/css/theme.css" type="text/css" />
   <!--[if lt IE 9]>
@@ -12,7 +12,7 @@
   
         <script src="_static/jquery.js?v=5d32c60e"></script>
         <script src="_static/_sphinx_javascript_frameworks_compat.js?v=2cd50e6c"></script>
-        <script src="_static/documentation_options.js?v=796a81b5"></script>
+        <script src="_static/documentation_options.js?v=4f6ddb47"></script>
         <script src="_static/doctools.js?v=888ff710"></script>
         <script src="_static/sphinx_highlight.js?v=dc90522c"></script>
     <script src="_static/js/theme.js"></script>
@@ -32,7 +32,7 @@
             absfuyu
           </a>
               <div class="version">
-                3.1.1
+                3.2.0
               </div>
 <div role="search">
   <form id="rtd-search-form" class="wy-form" action="search.html" method="get">
@@ -467,11 +467,17 @@
 </li>
       <li><a href="absfuyu.general.html#absfuyu.general.generator.Charset">Charset (class in absfuyu.general.generator)</a>
 </li>
+      <li><a href="absfuyu.util.html#absfuyu.util.performance.Checker.check">check() (absfuyu.util.performance.Checker method)</a>
+</li>
       <li><a href="absfuyu.html#absfuyu.version.PkgVersion.check_for_update">check_for_update() (absfuyu.version.PkgVersion method)</a>
+</li>
+      <li><a href="absfuyu.util.html#absfuyu.util.performance.Checker">Checker (class in absfuyu.util.performance)</a>
 </li>
       <li><a href="absfuyu.extensions.extra.html#absfuyu.extensions.extra.data_analysis.CityData.city">city (absfuyu.extensions.extra.data_analysis.CityData attribute)</a>
 </li>
       <li><a href="absfuyu.extensions.extra.html#absfuyu.extensions.extra.data_analysis.CityData">CityData (class in absfuyu.extensions.extra.data_analysis)</a>
+</li>
+      <li><a href="absfuyu.util.html#absfuyu.util.performance.Checker.class_">class_ (absfuyu.util.performance.Checker property)</a>
 </li>
       <li><a href="absfuyu.general.html#absfuyu.general.ClassBase">ClassBase (class in absfuyu.general)</a>
 </li>
@@ -485,10 +491,10 @@
 </li>
       <li><a href="absfuyu.general.html#absfuyu.general.generator.Generator.combinations_range">combinations_range() (absfuyu.general.generator.Generator static method)</a>
 </li>
-      <li><a href="absfuyu.extensions.extra.html#absfuyu.extensions.extra.data_analysis.compare_2_list">compare_2_list() (in module absfuyu.extensions.extra.data_analysis)</a>
-</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="absfuyu.extensions.extra.html#absfuyu.extensions.extra.data_analysis.compare_2_list">compare_2_list() (in module absfuyu.extensions.extra.data_analysis)</a>
+</li>
       <li><a href="absfuyu.util.html#absfuyu.util.path.Directory.compress">compress() (absfuyu.util.path.Directory method)</a>
 </li>
       <li><a href="absfuyu.html#absfuyu.logger.compress_for_log">compress_for_log() (in module absfuyu.logger)</a>
@@ -553,15 +559,17 @@
 </li>
       <li><a href="absfuyu.extensions.extra.html#absfuyu.extensions.extra.data_analysis.SplittedDF.df_na">df_na (absfuyu.extensions.extra.data_analysis.SplittedDF attribute)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="absfuyu.general.html#absfuyu.general.data_extension.DictBoolFalse">DictBoolFalse (class in absfuyu.general.data_extension)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="absfuyu.general.html#absfuyu.general.data_extension.DictBoolTrue">DictBoolTrue (class in absfuyu.general.data_extension)</a>
 </li>
       <li><a href="absfuyu.general.html#absfuyu.general.data_extension.DictExt">DictExt (class in absfuyu.general.data_extension)</a>
 </li>
       <li><a href="absfuyu.general.html#absfuyu.general.generator.Charset.DIGIT">DIGIT (absfuyu.general.generator.Charset attribute)</a>
+</li>
+      <li><a href="absfuyu.util.html#absfuyu.util.performance.Checker.dir_">dir_ (absfuyu.util.performance.Checker property)</a>
 </li>
       <li><a href="absfuyu.general.html#absfuyu.general.Dummy.dir_">dir_() (absfuyu.general.Dummy method)</a>
 
@@ -578,6 +586,8 @@
       <li><a href="absfuyu.general.html#absfuyu.general.data_extension.Text.divide_with_variable">divide_with_variable() (absfuyu.general.data_extension.Text method)</a>
 </li>
       <li><a href="absfuyu.general.html#absfuyu.general.data_extension.IntNumber.divisible_list">divisible_list() (absfuyu.general.data_extension.IntNumber method)</a>
+</li>
+      <li><a href="absfuyu.util.html#absfuyu.util.performance.Checker.docstring">docstring (absfuyu.util.performance.Checker property)</a>
 </li>
       <li><a href="absfuyu.extensions.extra.html#absfuyu.extensions.extra.data_analysis.DataAnalystDataFrame.drop_columns">drop_columns() (absfuyu.extensions.extra.data_analysis.DataAnalystDataFrame method)</a>
 </li>
@@ -636,6 +646,8 @@
       <li><a href="absfuyu.html#absfuyu.version.Version.from_tuple">from_tuple() (absfuyu.version.Version class method)</a>
 </li>
       <li><a href="absfuyu.general.html#absfuyu.general.generator.Charset.FULL">FULL (absfuyu.general.generator.Charset attribute)</a>
+</li>
+      <li><a href="absfuyu.util.html#absfuyu.util.performance.function_debug">function_debug() (in module absfuyu.util.performance)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -711,6 +723,8 @@
 <h2 id="I">I</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="absfuyu.util.html#absfuyu.util.performance.Checker.id_">id_ (absfuyu.util.performance.Checker property)</a>
+</li>
       <li><a href="absfuyu.fun.html#absfuyu.fun.im_bored">im_bored() (in module absfuyu.fun)</a>
 </li>
       <li><a href="absfuyu.html#absfuyu.logger.LogLevel.INFO">INFO (absfuyu.logger.LogLevel attribute)</a>
@@ -725,10 +739,10 @@
 </li>
       <li><a href="absfuyu.extensions.html#absfuyu.extensions.is_loaded">is_loaded() (in module absfuyu.extensions)</a>
 </li>
-      <li><a href="absfuyu.general.html#absfuyu.general.human.Human.is_male">is_male (absfuyu.general.human.Human property)</a>
-</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="absfuyu.general.html#absfuyu.general.human.Human.is_male">is_male (absfuyu.general.human.Human property)</a>
+</li>
       <li><a href="absfuyu.general.html#absfuyu.general.data_extension.IntNumber.is_narcissistic">is_narcissistic() (absfuyu.general.data_extension.IntNumber method)</a>
 </li>
       <li><a href="absfuyu.general.html#absfuyu.general.data_extension.Text.is_palindrome">is_palindrome() (absfuyu.general.data_extension.Text method)</a>
@@ -950,6 +964,8 @@
 <h2 id="N">N</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="absfuyu.util.html#absfuyu.util.performance.Checker.name">name (absfuyu.util.performance.Checker property)</a>
+</li>
       <li><a href="absfuyu.util.html#absfuyu.util.lunar.LunarCalendar.now">now() (absfuyu.util.lunar.LunarCalendar class method)</a>
 </li>
   </ul></td>
@@ -1027,6 +1043,10 @@
       <li><a href="absfuyu.extensions.extra.html#absfuyu.extensions.extra.data_analysis.DataAnalystDataFrame.qdescribe">qdescribe() (absfuyu.extensions.extra.data_analysis.DataAnalystDataFrame method)</a>
 </li>
   </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="absfuyu.extensions.extra.html#absfuyu.extensions.extra.data_analysis.DataAnalystDataFrame.qinfo">qinfo() (absfuyu.extensions.extra.data_analysis.DataAnalystDataFrame method)</a>
+</li>
+  </ul></td>
 </tr></table>
 
 <h2 id="R">R</h2>
@@ -1055,6 +1075,8 @@
       <li><a href="absfuyu.html#absfuyu.core.CLITextColor.RESET">RESET (absfuyu.core.CLITextColor attribute)</a>
 </li>
       <li><a href="absfuyu.config.html#absfuyu.config.Config.reset_config">reset_config() (absfuyu.config.Config method)</a>
+</li>
+      <li><a href="absfuyu.util.html#absfuyu.util.performance.retry">retry() (in module absfuyu.util.performance)</a>
 </li>
       <li><a href="absfuyu.general.html#absfuyu.general.data_extension.IntNumber.reverse">reverse() (absfuyu.general.data_extension.IntNumber method)</a>
 
@@ -1090,12 +1112,16 @@
 </li>
       <li><a href="absfuyu.util.html#absfuyu.util.set_min_max">set_min_max() (in module absfuyu.util)</a>
 </li>
+      <li><a href="absfuyu.config.html#absfuyu.config.Config.setting_list">setting_list (absfuyu.config.Config property)</a>
+</li>
       <li><a href="absfuyu.general.html#absfuyu.general.content.Content.short_form">short_form() (absfuyu.general.content.Content method)</a>
 
       <ul>
         <li><a href="absfuyu.general.html#absfuyu.general.content.LoadedContent.short_form">(absfuyu.general.content.LoadedContent method)</a>
 </li>
       </ul></li>
+      <li><a href="absfuyu.extensions.extra.html#absfuyu.extensions.extra.data_analysis.DataAnalystDataFrame.show_distribution">show_distribution() (absfuyu.extensions.extra.data_analysis.DataAnalystDataFrame method)</a>
+</li>
       <li><a href="absfuyu.config.html#absfuyu.config.Config.show_settings">show_settings() (absfuyu.config.Config method)</a>
 </li>
       <li><a href="absfuyu.general.html#absfuyu.general.data_extension.ListExt.slice_points">slice_points() (absfuyu.general.data_extension.ListExt method)</a>
@@ -1112,7 +1138,7 @@
 </li>
       <li><a href="absfuyu.tools.html#absfuyu.tools.web.soup_link">soup_link() (in module absfuyu.tools.web)</a>
 </li>
-      <li><a href="absfuyu.util.html#absfuyu.util.performance.source_this">source_this() (in module absfuyu.util.performance)</a>
+      <li><a href="absfuyu.util.html#absfuyu.util.performance.Checker.source">source (absfuyu.util.performance.Checker property)</a>
 </li>
       <li><a href="absfuyu.general.html#absfuyu.general.generator.Charset.SPECIAL">SPECIAL (absfuyu.general.generator.Charset attribute)</a>
 </li>
@@ -1121,6 +1147,8 @@
       <li><a href="absfuyu.extensions.extra.html#absfuyu.extensions.extra.data_analysis.SplittedDF">SplittedDF (class in absfuyu.extensions.extra.data_analysis)</a>
 </li>
       <li><a href="absfuyu.tools.html#absfuyu.tools.stats.ListStats.std">std() (absfuyu.tools.stats.ListStats method)</a>
+</li>
+      <li><a href="absfuyu.util.html#absfuyu.util.stop_after_day">stop_after_day() (in module absfuyu.util)</a>
 </li>
       <li><a href="absfuyu.tools.html#absfuyu.tools.converter.Str2Pixel">Str2Pixel (class in absfuyu.tools.converter)</a>
 </li>
@@ -1202,6 +1230,8 @@
 </li>
       <li><a href="absfuyu.config.html#absfuyu.config.Config.toggle_setting">toggle_setting() (absfuyu.config.Config method)</a>
 </li>
+      <li><a href="absfuyu.extensions.extra.html#absfuyu.extensions.extra.data_analysis.DataAnalystDataFrame.total_observation">total_observation (absfuyu.extensions.extra.data_analysis.DataAnalystDataFrame property)</a>
+</li>
       <li><a href="absfuyu.html#absfuyu.logger.LogLevel.TRACE">TRACE (absfuyu.logger.LogLevel attribute)</a>
 </li>
   </ul></td>
@@ -1242,12 +1272,14 @@
 <h2 id="V">V</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="absfuyu.tools.html#absfuyu.tools.stats.ListStats.var">var() (absfuyu.tools.stats.ListStats method)</a>
+      <li><a href="absfuyu.util.html#absfuyu.util.performance.Checker.value">value (absfuyu.util.performance.Checker property)</a>
 </li>
-      <li><a href="absfuyu.util.html#absfuyu.util.performance.var_check">var_check() (in module absfuyu.util.performance)</a>
+      <li><a href="absfuyu.tools.html#absfuyu.tools.stats.ListStats.var">var() (absfuyu.tools.stats.ListStats method)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="absfuyu.util.html#absfuyu.util.performance.var_check">var_check() (in module absfuyu.util.performance)</a>
+</li>
       <li><a href="absfuyu.html#absfuyu.version.Version.version">version (absfuyu.version.Version property)</a>
 </li>
       <li><a href="absfuyu.html#absfuyu.version.Version">Version (class in absfuyu.version)</a>
