--- a/genindex.html
+++ b/genindex.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Index &mdash; absfuyu 3.2.0 documentation</title>
+  <title>Index &mdash; absfuyu 3.3.0 documentation</title>
       <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
       <link rel="stylesheet" href="_static/css/theme.css" type="text/css" />
   <!--[if lt IE 9]>
@@ -12,7 +12,7 @@
   
         <script src="_static/jquery.js?v=5d32c60e"></script>
         <script src="_static/_sphinx_javascript_frameworks_compat.js?v=2cd50e6c"></script>
-        <script src="_static/documentation_options.js?v=4f6ddb47"></script>
+        <script src="_static/documentation_options.js?v=3eb8911e"></script>
         <script src="_static/doctools.js?v=888ff710"></script>
         <script src="_static/sphinx_highlight.js?v=dc90522c"></script>
     <script src="_static/js/theme.js"></script>
@@ -32,7 +32,7 @@
             absfuyu
           </a>
               <div class="version">
-                3.2.0
+                3.3.0
               </div>
 <div role="search">
   <form id="rtd-search-form" class="wy-form" action="search.html" method="get">
@@ -491,10 +491,10 @@
 </li>
       <li><a href="absfuyu.general.html#absfuyu.general.generator.Generator.combinations_range">combinations_range() (absfuyu.general.generator.Generator static method)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="absfuyu.extensions.extra.html#absfuyu.extensions.extra.data_analysis.compare_2_list">compare_2_list() (in module absfuyu.extensions.extra.data_analysis)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="absfuyu.util.html#absfuyu.util.path.Directory.compress">compress() (absfuyu.util.path.Directory method)</a>
 </li>
       <li><a href="absfuyu.html#absfuyu.logger.compress_for_log">compress_for_log() (in module absfuyu.logger)</a>
@@ -522,6 +522,10 @@
       <li><a href="absfuyu.extensions.extra.html#absfuyu.extensions.extra.data_analysis.DataAnalystDataFrame.convert_city">convert_city() (absfuyu.extensions.extra.data_analysis.DataAnalystDataFrame method)</a>
 </li>
       <li><a href="absfuyu.util.html#absfuyu.util.path.Directory.copy">copy() (absfuyu.util.path.Directory method)</a>
+</li>
+      <li><a href="absfuyu.general.html#absfuyu.general.data_extension.Text.count_pattern">count_pattern() (absfuyu.general.data_extension.Text method)</a>
+</li>
+      <li><a href="absfuyu.util.html#absfuyu.util.path.DirectoryInfo.creation_time">creation_time (absfuyu.util.path.DirectoryInfo attribute)</a>
 </li>
       <li><a href="absfuyu.html#absfuyu.logger.LogLevel.CRITICAL">CRITICAL (absfuyu.logger.LogLevel attribute)</a>
 </li>
@@ -559,6 +563,8 @@
 </li>
       <li><a href="absfuyu.extensions.extra.html#absfuyu.extensions.extra.data_analysis.SplittedDF.df_na">df_na (absfuyu.extensions.extra.data_analysis.SplittedDF attribute)</a>
 </li>
+      <li><a href="absfuyu.general.html#absfuyu.general.data_extension.DictAnalyzeResult">DictAnalyzeResult (class in absfuyu.general.data_extension)</a>
+</li>
       <li><a href="absfuyu.general.html#absfuyu.general.data_extension.DictBoolFalse">DictBoolFalse (class in absfuyu.general.data_extension)</a>
 </li>
   </ul></td>
@@ -566,6 +572,8 @@
       <li><a href="absfuyu.general.html#absfuyu.general.data_extension.DictBoolTrue">DictBoolTrue (class in absfuyu.general.data_extension)</a>
 </li>
       <li><a href="absfuyu.general.html#absfuyu.general.data_extension.DictExt">DictExt (class in absfuyu.general.data_extension)</a>
+</li>
+      <li><a href="absfuyu.general.html#absfuyu.general.data_extension.TextAnalyzeDictFormat.digit">digit (absfuyu.general.data_extension.TextAnalyzeDictFormat attribute)</a>
 </li>
       <li><a href="absfuyu.general.html#absfuyu.general.generator.Charset.DIGIT">DIGIT (absfuyu.general.generator.Charset attribute)</a>
 </li>
@@ -578,6 +586,8 @@
 </li>
       </ul></li>
       <li><a href="absfuyu.util.html#absfuyu.util.path.Directory">Directory (class in absfuyu.util.path)</a>
+</li>
+      <li><a href="absfuyu.util.html#absfuyu.util.path.DirectoryInfo">DirectoryInfo (class in absfuyu.util.path)</a>
 </li>
       <li><a href="absfuyu.general.html#absfuyu.general.data_extension.Text.divide">divide() (absfuyu.general.data_extension.Text method)</a>
 </li>
@@ -607,6 +617,8 @@
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="absfuyu.util.html#absfuyu.util.path.Directory.everything">everything (absfuyu.util.path.Directory property)</a>
+</li>
       <li><a href="absfuyu.game.html#absfuyu.game.sudoku.Sudoku.export_to_string">export_to_string() (absfuyu.game.sudoku.Sudoku method)</a>
 </li>
       <li><a href="absfuyu.html#absfuyu.logger.LogLevel.EXTREME">EXTREME (absfuyu.logger.LogLevel attribute)</a>
@@ -621,6 +633,10 @@
 </li>
       <li><a href="absfuyu.util.html#absfuyu.util.api.APIRequest.fetch_data_only">fetch_data_only() (absfuyu.util.api.APIRequest method)</a>
 </li>
+      <li><a href="absfuyu.util.html#absfuyu.util.path.FileOrFolderWithModificationTime">FileOrFolderWithModificationTime (class in absfuyu.util.path)</a>
+</li>
+      <li><a href="absfuyu.util.html#absfuyu.util.path.DirectoryInfo.files">files (absfuyu.util.path.DirectoryInfo attribute)</a>
+</li>
       <li><a href="absfuyu.extensions.extra.html#absfuyu.extensions.extra.data_analysis.DataAnalystDataFrame.fill_missing_values">fill_missing_values() (absfuyu.extensions.extra.data_analysis.DataAnalystDataFrame method)</a>
 </li>
       <li><a href="absfuyu.general.html#absfuyu.general.content.LoadedContent.filter">filter() (absfuyu.general.content.LoadedContent method)</a>
@@ -633,6 +649,8 @@
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="absfuyu.util.html#absfuyu.util.path.DirectoryInfo.folders">folders (absfuyu.util.path.DirectoryInfo attribute)</a>
+</li>
       <li><a href="absfuyu.fun.html#absfuyu.fun.force_shutdown">force_shutdown() (in module absfuyu.fun)</a>
 </li>
       <li><a href="absfuyu.general.html#absfuyu.general.data_extension.ListExt.freq">freq() (absfuyu.general.data_extension.ListExt method)</a>
@@ -707,10 +725,12 @@
         <li><a href="absfuyu.general.html#absfuyu.general.content.LoadedContent.handle_address">(absfuyu.general.content.LoadedContent method)</a>
 </li>
       </ul></li>
-      <li><a href="absfuyu.fun.html#absfuyu.fun.happy_new_year">happy_new_year() (in module absfuyu.fun)</a>
+      <li><a href="absfuyu.general.html#absfuyu.general.data_extension.Text.hapax">hapax() (absfuyu.general.data_extension.Text method)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="absfuyu.fun.html#absfuyu.fun.happy_new_year">happy_new_year() (in module absfuyu.fun)</a>
+</li>
       <li><a href="absfuyu.game.html#absfuyu.game.sudoku.Sudoku.hardest_sudoku">hardest_sudoku() (absfuyu.game.sudoku.Sudoku class method)</a>
 </li>
       <li><a href="absfuyu.general.html#absfuyu.general.data_extension.ListExt.head">head() (absfuyu.general.data_extension.ListExt method)</a>
@@ -739,17 +759,21 @@
 </li>
       <li><a href="absfuyu.extensions.html#absfuyu.extensions.is_loaded">is_loaded() (in module absfuyu.extensions)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="absfuyu.general.html#absfuyu.general.human.Human.is_male">is_male (absfuyu.general.human.Human property)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="absfuyu.general.html#absfuyu.general.data_extension.IntNumber.is_narcissistic">is_narcissistic() (absfuyu.general.data_extension.IntNumber method)</a>
+</li>
+      <li><a href="absfuyu.general.html#absfuyu.general.data_extension.TextAnalyzeDictFormat.is_palindrome">is_palindrome (absfuyu.general.data_extension.TextAnalyzeDictFormat attribute)</a>
 </li>
       <li><a href="absfuyu.general.html#absfuyu.general.data_extension.Text.is_palindrome">is_palindrome() (absfuyu.general.data_extension.Text method)</a>
 </li>
       <li><a href="absfuyu.general.html#absfuyu.general.data_extension.IntNumber.is_palindromic">is_palindromic() (absfuyu.general.data_extension.IntNumber method)</a>
 </li>
       <li><a href="absfuyu.general.html#absfuyu.general.data_extension.IntNumber.is_palindromic_prime">is_palindromic_prime() (absfuyu.general.data_extension.IntNumber method)</a>
+</li>
+      <li><a href="absfuyu.general.html#absfuyu.general.data_extension.TextAnalyzeDictFormat.is_pangram">is_pangram (absfuyu.general.data_extension.TextAnalyzeDictFormat attribute)</a>
 </li>
       <li><a href="absfuyu.general.html#absfuyu.general.data_extension.Text.is_pangram">is_pangram() (absfuyu.general.data_extension.Text method)</a>
 </li>
@@ -829,6 +853,8 @@
 </li>
       <li><a href="absfuyu.html#absfuyu.logger.LogLevel">LogLevel (class in absfuyu.logger)</a>
 </li>
+      <li><a href="absfuyu.general.html#absfuyu.general.data_extension.TextAnalyzeDictFormat.lowercase">lowercase (absfuyu.general.data_extension.TextAnalyzeDictFormat attribute)</a>
+</li>
       <li><a href="absfuyu.general.html#absfuyu.general.generator.Charset.LOWERCASE">LOWERCASE (absfuyu.general.generator.Charset attribute)</a>
 </li>
       <li><a href="absfuyu.util.html#absfuyu.util.lunar.LunarCalendar">LunarCalendar (class in absfuyu.util.lunar)</a>
@@ -851,6 +877,10 @@
 </li>
       <li><a href="absfuyu.extensions.extra.html#absfuyu.extensions.extra.data_analysis.MatplotlibFormatString">MatplotlibFormatString (class in absfuyu.extensions.extra.data_analysis)</a>
 </li>
+      <li><a href="absfuyu.general.html#absfuyu.general.data_extension.DictAnalyzeResult.max_list">max_list (absfuyu.general.data_extension.DictAnalyzeResult attribute)</a>
+</li>
+      <li><a href="absfuyu.general.html#absfuyu.general.data_extension.DictAnalyzeResult.max_value">max_value (absfuyu.general.data_extension.DictAnalyzeResult attribute)</a>
+</li>
       <li><a href="absfuyu.tools.html#absfuyu.tools.stats.ListStats.mean">mean() (absfuyu.tools.stats.ListStats method)</a>
 </li>
       <li><a href="absfuyu.general.html#absfuyu.general.data_extension.ListExt.mean_len">mean_len() (absfuyu.general.data_extension.ListExt method)</a>
@@ -858,6 +888,10 @@
       <li><a href="absfuyu.util.html#absfuyu.util.performance.measure_performance">measure_performance() (in module absfuyu.util.performance)</a>
 </li>
       <li><a href="absfuyu.tools.html#absfuyu.tools.stats.ListStats.median">median() (absfuyu.tools.stats.ListStats method)</a>
+</li>
+      <li><a href="absfuyu.general.html#absfuyu.general.data_extension.DictAnalyzeResult.min_list">min_list (absfuyu.general.data_extension.DictAnalyzeResult attribute)</a>
+</li>
+      <li><a href="absfuyu.general.html#absfuyu.general.data_extension.DictAnalyzeResult.min_value">min_value (absfuyu.general.data_extension.DictAnalyzeResult attribute)</a>
 </li>
       <li><a href="absfuyu.html#absfuyu.version.ReleaseOption.MINOR">MINOR (absfuyu.version.ReleaseOption attribute)</a>
 </li>
@@ -871,6 +905,12 @@
 </li>
       <li><a href="absfuyu.tools.html#absfuyu.tools.stats.ListStats.mode">mode() (absfuyu.tools.stats.ListStats method)</a>
 </li>
+      <li><a href="absfuyu.util.html#absfuyu.util.path.DirectoryInfo.modification_time">modification_time (absfuyu.util.path.DirectoryInfo attribute)</a>
+
+      <ul>
+        <li><a href="absfuyu.util.html#absfuyu.util.path.FileOrFolderWithModificationTime.modification_time">(absfuyu.util.path.FileOrFolderWithModificationTime attribute)</a>
+</li>
+      </ul></li>
       <li>
     module
 
@@ -990,6 +1030,8 @@
 </li>
       <li><a href="absfuyu.game.html#absfuyu.game.tictactoe2.GameMode.ONE_V_ONE">ONE_V_ONE (absfuyu.game.tictactoe2.GameMode attribute)</a>
 </li>
+      <li><a href="absfuyu.general.html#absfuyu.general.data_extension.TextAnalyzeDictFormat.other">other (absfuyu.general.data_extension.TextAnalyzeDictFormat attribute)</a>
+</li>
   </ul></td>
 </tr></table>
 
@@ -997,6 +1039,8 @@
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="absfuyu.html#absfuyu.version.ReleaseOption.PATCH">PATCH (absfuyu.version.ReleaseOption attribute)</a>
+</li>
+      <li><a href="absfuyu.util.html#absfuyu.util.path.FileOrFolderWithModificationTime.path">path (absfuyu.util.path.FileOrFolderWithModificationTime attribute)</a>
 </li>
       <li><a href="absfuyu.tools.html#absfuyu.tools.stats.ListStats.percentile">percentile() (absfuyu.tools.stats.ListStats method)</a>
 </li>
@@ -1045,6 +1089,8 @@
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="absfuyu.extensions.extra.html#absfuyu.extensions.extra.data_analysis.DataAnalystDataFrame.qinfo">qinfo() (absfuyu.extensions.extra.data_analysis.DataAnalystDataFrame method)</a>
+</li>
+      <li><a href="absfuyu.util.html#absfuyu.util.path.Directory.quick_info">quick_info() (absfuyu.util.path.Directory method)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -1184,6 +1230,8 @@
 </li>
       <li><a href="absfuyu.fun.html#absfuyu.fun.WGS.WGS.text_art">text_art() (absfuyu.fun.WGS.WGS method)</a>
 </li>
+      <li><a href="absfuyu.general.html#absfuyu.general.data_extension.TextAnalyzeDictFormat">TextAnalyzeDictFormat (class in absfuyu.general.data_extension)</a>
+</li>
       <li><a href="absfuyu.extensions.extra.html#absfuyu.extensions.extra.data_analysis.DataAnalystDataFrame.threshold_filter">threshold_filter() (absfuyu.extensions.extra.data_analysis.DataAnalystDataFrame method)</a>
 </li>
       <li><a href="absfuyu.game.html#absfuyu.game.tictactoe2.TicTacToe">TicTacToe (class in absfuyu.game.tictactoe2)</a>
@@ -1214,6 +1262,8 @@
         <li><a href="absfuyu.general.html#absfuyu.general.data_extension.Text.to_list">(absfuyu.general.data_extension.Text method)</a>
 </li>
       </ul></li>
+      <li><a href="absfuyu.general.html#absfuyu.general.data_extension.Text.to_listext">to_listext() (absfuyu.general.data_extension.Text method)</a>
+</li>
       <li><a href="absfuyu.util.html#absfuyu.util.lunar.LunarCalendar.to_lunar">to_lunar() (absfuyu.util.lunar.LunarCalendar method)</a>
 </li>
       <li><a href="absfuyu.tools.html#absfuyu.tools.obfuscator.Obfuscator.to_single_line">to_single_line() (absfuyu.tools.obfuscator.Obfuscator method)</a>
@@ -1263,6 +1313,8 @@
       <li><a href="absfuyu.config.html#absfuyu.config.Config.update_version">update_version() (absfuyu.config.Config method)</a>
 </li>
       <li><a href="absfuyu.game.html#absfuyu.game.wordle.Wordle.update_words">update_words() (absfuyu.game.wordle.Wordle method)</a>
+</li>
+      <li><a href="absfuyu.general.html#absfuyu.general.data_extension.TextAnalyzeDictFormat.uppercase">uppercase (absfuyu.general.data_extension.TextAnalyzeDictFormat attribute)</a>
 </li>
       <li><a href="absfuyu.general.html#absfuyu.general.generator.Charset.UPPERCASE">UPPERCASE (absfuyu.general.generator.Charset attribute)</a>
 </li>
