--- a/genindex.html
+++ b/genindex.html
@@ -260,6 +260,13 @@
 </li>
       </ul></li>
       <li>
+    absfuyu.game.game_stat
+
+      <ul>
+        <li><a href="absfuyu.game.html#module-absfuyu.game.game_stat">module</a>
+</li>
+      </ul></li>
+      <li>
     absfuyu.game.sudoku
 
       <ul>
@@ -343,6 +350,13 @@
 
       <ul>
         <li><a href="absfuyu.tools.html#module-absfuyu.tools">module</a>
+</li>
+      </ul></li>
+      <li>
+    absfuyu.tools.checksum
+
+      <ul>
+        <li><a href="absfuyu.tools.html#module-absfuyu.tools.checksum">module</a>
 </li>
       </ul></li>
       <li>
@@ -430,6 +444,13 @@
 </li>
       </ul></li>
       <li>
+    absfuyu.util.shorten_number
+
+      <ul>
+        <li><a href="absfuyu.util.html#module-absfuyu.util.shorten_number">module</a>
+</li>
+      </ul></li>
+      <li>
     absfuyu.util.zipped
 
       <ul>
@@ -497,16 +518,22 @@
 <h2 id="B">B</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="absfuyu.util.html#absfuyu.util.shorten_number.Decimal.base">base (absfuyu.util.shorten_number.Decimal attribute)</a>
+
+      <ul>
+        <li><a href="absfuyu.util.html#absfuyu.util.shorten_number.UnitSuffixFactory.base">(absfuyu.util.shorten_number.UnitSuffixFactory attribute)</a>
+</li>
+      </ul></li>
       <li><a href="absfuyu.tools.html#absfuyu.tools.converter.Base64EncodeDecode">Base64EncodeDecode (class in absfuyu.tools.converter)</a>
 </li>
       <li><a href="absfuyu.extensions.html#absfuyu.extensions.beautiful.beautiful_output">beautiful_output() (in module absfuyu.extensions.beautiful)</a>
 </li>
       <li><a href="absfuyu.html#absfuyu.sort.binary_search">binary_search() (in module absfuyu.sort)</a>
 </li>
-      <li><a href="absfuyu.html#absfuyu.core.CLITextColor.BLACK">BLACK (absfuyu.core.CLITextColor attribute)</a>
-</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="absfuyu.html#absfuyu.core.CLITextColor.BLACK">BLACK (absfuyu.core.CLITextColor attribute)</a>
+</li>
       <li><a href="absfuyu.html#absfuyu.core.CLITextColor.BLUE">BLUE (absfuyu.core.CLITextColor attribute)</a>
 </li>
       <li><a href="absfuyu.general.html#absfuyu.general.human.Human.bmi">bmi (absfuyu.general.human.Human property)</a>
@@ -537,6 +564,12 @@
 </li>
       <li><a href="absfuyu.util.html#absfuyu.util.performance.Checker">Checker (class in absfuyu.util.performance)</a>
 </li>
+      <li><a href="absfuyu.tools.html#absfuyu.tools.checksum.Checksum">Checksum (class in absfuyu.tools.checksum)</a>
+</li>
+      <li><a href="absfuyu.tools.html#absfuyu.tools.checksum.Checksum.checksum">checksum() (absfuyu.tools.checksum.Checksum method)</a>
+</li>
+      <li><a href="absfuyu.tools.html#absfuyu.tools.checksum.checksum_operation">checksum_operation() (in module absfuyu.tools.checksum)</a>
+</li>
       <li><a href="absfuyu.extensions.extra.html#absfuyu.extensions.extra.data_analysis.CityData.city">city (absfuyu.extensions.extra.data_analysis.CityData attribute)</a>
 </li>
       <li><a href="absfuyu.extensions.extra.html#absfuyu.extensions.extra.data_analysis.CityData">CityData (class in absfuyu.extensions.extra.data_analysis)</a>
@@ -551,11 +584,13 @@
 </li>
       <li><a href="absfuyu.extensions.extra.html#absfuyu.extensions.extra.data_analysis.PLTFormatString.color">color (absfuyu.extensions.extra.data_analysis.PLTFormatString attribute)</a>
 </li>
-      <li><a href="absfuyu.extensions.extra.html#absfuyu.extensions.extra.data_analysis.MatplotlibFormatString.COLOR_LIST">COLOR_LIST (absfuyu.extensions.extra.data_analysis.MatplotlibFormatString attribute)</a>
-</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="absfuyu.extensions.extra.html#absfuyu.extensions.extra.data_analysis.MatplotlibFormatString.COLOR_LIST">COLOR_LIST (absfuyu.extensions.extra.data_analysis.MatplotlibFormatString attribute)</a>
+</li>
       <li><a href="absfuyu.general.html#absfuyu.general.generator.Generator.combinations_range">combinations_range() (absfuyu.general.generator.Generator static method)</a>
+</li>
+      <li><a href="absfuyu.util.html#absfuyu.util.shorten_number.CommonUnitSuffixesFactory">CommonUnitSuffixesFactory (class in absfuyu.util.shorten_number)</a>
 </li>
       <li><a href="absfuyu.extensions.extra.html#absfuyu.extensions.extra.data_analysis.compare_2_list">compare_2_list() (in module absfuyu.extensions.extra.data_analysis)</a>
 </li>
@@ -601,9 +636,15 @@
 </li>
       <li><a href="absfuyu.html#absfuyu.core.CLITextColor.DARK_RED">DARK_RED (absfuyu.core.CLITextColor attribute)</a>
 </li>
+      <li><a href="absfuyu.util.html#absfuyu.util.shorten_number.CommonUnitSuffixesFactory.DATA_SIZE">DATA_SIZE (absfuyu.util.shorten_number.CommonUnitSuffixesFactory attribute)</a>
+</li>
+      <li><a href="absfuyu.util.html#absfuyu.util.shorten_number.Decimal.data_size">data_size() (absfuyu.util.shorten_number.Decimal class method)</a>
+</li>
       <li><a href="absfuyu.extensions.extra.html#absfuyu.extensions.extra.data_analysis.DataAnalystDataFrame">DataAnalystDataFrame (class in absfuyu.extensions.extra.data_analysis)</a>
 </li>
       <li><a href="absfuyu.html#absfuyu.logger.LogLevel.DEBUG">DEBUG (absfuyu.logger.LogLevel attribute)</a>
+</li>
+      <li><a href="absfuyu.util.html#absfuyu.util.shorten_number.Decimal">Decimal (class in absfuyu.util.shorten_number)</a>
 </li>
       <li><a href="absfuyu.tools.html#absfuyu.tools.converter.Base64EncodeDecode.decode">decode() (absfuyu.tools.converter.Base64EncodeDecode static method)</a>
 </li>
@@ -625,10 +666,10 @@
 </li>
       <li><a href="absfuyu.general.html#absfuyu.general.data_extension.DictBoolFalse">DictBoolFalse (class in absfuyu.general.data_extension)</a>
 </li>
-      <li><a href="absfuyu.general.html#absfuyu.general.data_extension.DictBoolTrue">DictBoolTrue (class in absfuyu.general.data_extension)</a>
-</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="absfuyu.general.html#absfuyu.general.data_extension.DictBoolTrue">DictBoolTrue (class in absfuyu.general.data_extension)</a>
+</li>
       <li><a href="absfuyu.general.html#absfuyu.general.data_extension.DictExt">DictExt (class in absfuyu.general.data_extension)</a>
 </li>
       <li><a href="absfuyu.general.html#absfuyu.general.data_extension.TextAnalyzeDictFormat.digit">digit (absfuyu.general.data_extension.TextAnalyzeDictFormat attribute)</a>
@@ -656,6 +697,8 @@
       <li><a href="absfuyu.general.html#absfuyu.general.data_extension.IntNumber.divisible_list">divisible_list() (absfuyu.general.data_extension.IntNumber method)</a>
 </li>
       <li><a href="absfuyu.util.html#absfuyu.util.performance.Checker.docstring">docstring (absfuyu.util.performance.Checker property)</a>
+</li>
+      <li><a href="absfuyu.game.html#absfuyu.game.game_stat.GameStats.draw">draw (absfuyu.game.game_stat.GameStats attribute)</a>
 </li>
       <li><a href="absfuyu.extensions.extra.html#absfuyu.extensions.extra.data_analysis.DataAnalystDataFrame.drop_columns">drop_columns() (absfuyu.extensions.extra.data_analysis.DataAnalystDataFrame method)</a>
 </li>
@@ -687,6 +730,8 @@
 <h2 id="F">F</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="absfuyu.util.html#absfuyu.util.shorten_number.Decimal.factory">factory (absfuyu.util.shorten_number.Decimal attribute)</a>
+</li>
       <li><a href="absfuyu.util.html#absfuyu.util.api.APIRequest.fetch_data">fetch_data() (absfuyu.util.api.APIRequest method)</a>
 </li>
       <li><a href="absfuyu.util.html#absfuyu.util.api.APIRequest.fetch_data_only">fetch_data_only() (absfuyu.util.api.APIRequest method)</a>
@@ -727,6 +772,8 @@
 </li>
       <li><a href="absfuyu.general.html#absfuyu.general.generator.Charset.FULL">FULL (absfuyu.general.generator.Charset attribute)</a>
 </li>
+      <li><a href="absfuyu.util.html#absfuyu.util.shorten_number.UnitSuffixFactory.full_name">full_name (absfuyu.util.shorten_number.UnitSuffixFactory attribute)</a>
+</li>
       <li><a href="absfuyu.util.html#absfuyu.util.performance.function_debug">function_debug() (in module absfuyu.util.performance)</a>
 </li>
   </ul></td>
@@ -741,6 +788,8 @@
 </li>
       <li><a href="absfuyu.game.html#absfuyu.game.tictactoe.GameMode">GameMode (class in absfuyu.game.tictactoe)</a>
 </li>
+      <li><a href="absfuyu.game.html#absfuyu.game.game_stat.GameStats">GameStats (class in absfuyu.game.game_stat)</a>
+</li>
       <li><a href="absfuyu.general.html#absfuyu.general.data_extension.IntNumber.gcd">gcd() (absfuyu.general.data_extension.IntNumber method)</a>
 </li>
       <li><a href="absfuyu.tools.html#absfuyu.tools.web.gen_random_commit_msg">gen_random_commit_msg() (in module absfuyu.tools.web)</a>
@@ -753,10 +802,10 @@
 </li>
       <li><a href="absfuyu.extensions.dev.html#absfuyu.extensions.dev.passwordlib.Password.generate_password">generate_password() (absfuyu.extensions.dev.passwordlib.Password static method)</a>
 </li>
-      <li><a href="absfuyu.general.html#absfuyu.general.generator.Generator.generate_string">generate_string() (absfuyu.general.generator.Generator static method)</a>
-</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="absfuyu.general.html#absfuyu.general.generator.Generator.generate_string">generate_string() (absfuyu.general.generator.Generator static method)</a>
+</li>
       <li><a href="absfuyu.general.html#absfuyu.general.generator.Generator">Generator (class in absfuyu.general.generator)</a>
 </li>
       <li><a href="absfuyu.util.html#absfuyu.util.get_installed_package">get_installed_package() (in module absfuyu.util)</a>
@@ -897,10 +946,10 @@
 </li>
       <li><a href="absfuyu.general.html#absfuyu.general.data_extension.ListREPR">ListREPR (class in absfuyu.general.data_extension)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="absfuyu.tools.html#absfuyu.tools.stats.ListStats">ListStats (class in absfuyu.tools.stats)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="absfuyu.general.html#absfuyu.general.content.ContentLoader.load">load() (absfuyu.general.content.ContentLoader method)</a>
 
       <ul>
@@ -918,6 +967,8 @@
       <li><a href="absfuyu.general.html#absfuyu.general.content.LoadedContent">LoadedContent (class in absfuyu.general.content)</a>
 </li>
       <li><a href="absfuyu.html#absfuyu.logger.LogLevel">LogLevel (class in absfuyu.logger)</a>
+</li>
+      <li><a href="absfuyu.game.html#absfuyu.game.game_stat.GameStats.lose">lose (absfuyu.game.game_stat.GameStats attribute)</a>
 </li>
       <li><a href="absfuyu.general.html#absfuyu.general.data_extension.TextAnalyzeDictFormat.lowercase">lowercase (absfuyu.general.data_extension.TextAnalyzeDictFormat attribute)</a>
 </li>
@@ -1025,6 +1076,8 @@
 </li>
         <li><a href="absfuyu.game.html#module-absfuyu.game">absfuyu.game</a>
 </li>
+        <li><a href="absfuyu.game.html#module-absfuyu.game.game_stat">absfuyu.game.game_stat</a>
+</li>
         <li><a href="absfuyu.game.html#module-absfuyu.game.sudoku">absfuyu.game.sudoku</a>
 </li>
         <li><a href="absfuyu.game.html#module-absfuyu.game.tictactoe">absfuyu.game.tictactoe</a>
@@ -1048,6 +1101,8 @@
         <li><a href="absfuyu.html#module-absfuyu.sort">absfuyu.sort</a>
 </li>
         <li><a href="absfuyu.tools.html#module-absfuyu.tools">absfuyu.tools</a>
+</li>
+        <li><a href="absfuyu.tools.html#module-absfuyu.tools.checksum">absfuyu.tools.checksum</a>
 </li>
         <li><a href="absfuyu.tools.html#module-absfuyu.tools.converter">absfuyu.tools.converter</a>
 </li>
@@ -1073,6 +1128,8 @@
 </li>
         <li><a href="absfuyu.util.html#module-absfuyu.util.pkl">absfuyu.util.pkl</a>
 </li>
+        <li><a href="absfuyu.util.html#module-absfuyu.util.shorten_number">absfuyu.util.shorten_number</a>
+</li>
         <li><a href="absfuyu.util.html#module-absfuyu.util.zipped">absfuyu.util.zipped</a>
 </li>
         <li><a href="absfuyu.html#module-absfuyu.version">absfuyu.version</a>
@@ -1088,8 +1145,12 @@
 </li>
       <li><a href="absfuyu.util.html#absfuyu.util.lunar.LunarCalendar.now">now() (absfuyu.util.lunar.LunarCalendar class method)</a>
 </li>
+      <li><a href="absfuyu.util.html#absfuyu.util.shorten_number.CommonUnitSuffixesFactory.NUMBER">NUMBER (absfuyu.util.shorten_number.CommonUnitSuffixesFactory attribute)</a>
+</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="absfuyu.util.html#absfuyu.util.shorten_number.Decimal.number">number() (absfuyu.util.shorten_number.Decimal class method)</a>
+</li>
       <li><a href="absfuyu.general.html#absfuyu.general.data_extension.ListExt.numbering">numbering() (absfuyu.general.data_extension.ListExt method)</a>
 </li>
       <li><a href="absfuyu.general.html#absfuyu.general.human.Person.numerology">numerology (absfuyu.general.human.Person property)</a>
@@ -1104,11 +1165,13 @@
 </li>
       <li><a href="absfuyu.tools.html#absfuyu.tools.obfuscator.Obfuscator">Obfuscator (class in absfuyu.tools.obfuscator)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="absfuyu.game.html#absfuyu.game.tictactoe.GameMode.ONE_V_BOT">ONE_V_BOT (absfuyu.game.tictactoe.GameMode attribute)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="absfuyu.game.html#absfuyu.game.tictactoe.GameMode.ONE_V_ONE">ONE_V_ONE (absfuyu.game.tictactoe.GameMode attribute)</a>
+</li>
+      <li><a href="absfuyu.util.html#absfuyu.util.shorten_number.Decimal.original_value">original_value (absfuyu.util.shorten_number.Decimal attribute)</a>
 </li>
       <li><a href="absfuyu.general.html#absfuyu.general.data_extension.TextAnalyzeDictFormat.other">other (absfuyu.general.data_extension.TextAnalyzeDictFormat attribute)</a>
 </li>
@@ -1246,6 +1309,8 @@
 </li>
       <li><a href="absfuyu.util.html#absfuyu.util.path.SaveFileAs">SaveFileAs (class in absfuyu.util.path)</a>
 </li>
+      <li><a href="absfuyu.util.html#absfuyu.util.shorten_number.Decimal.scientific_short">scientific_short() (absfuyu.util.shorten_number.Decimal static method)</a>
+</li>
       <li><a href="absfuyu.html#absfuyu.sort.selection_sort">selection_sort() (in module absfuyu.sort)</a>
 </li>
       <li><a href="absfuyu.util.html#absfuyu.util.set_max">set_max() (in module absfuyu.util)</a>
@@ -1262,6 +1327,8 @@
         <li><a href="absfuyu.general.html#absfuyu.general.content.LoadedContent.short_form">(absfuyu.general.content.LoadedContent method)</a>
 </li>
       </ul></li>
+      <li><a href="absfuyu.util.html#absfuyu.util.shorten_number.UnitSuffixFactory.short_name">short_name (absfuyu.util.shorten_number.UnitSuffixFactory attribute)</a>
+</li>
       <li><a href="absfuyu.extensions.extra.html#absfuyu.extensions.extra.data_analysis.DataAnalystDataFrame.show_distribution">show_distribution() (absfuyu.extensions.extra.data_analysis.DataAnalystDataFrame method)</a>
 </li>
       <li><a href="absfuyu.config.html#absfuyu.config.Config.show_settings">show_settings() (absfuyu.config.Config method)</a>
@@ -1301,6 +1368,12 @@
       <li><a href="absfuyu.general.html#absfuyu.general.data_extension.ListExt.stringify">stringify() (absfuyu.general.data_extension.ListExt method)</a>
 </li>
       <li><a href="absfuyu.game.html#absfuyu.game.sudoku.Sudoku">Sudoku (class in absfuyu.game.sudoku)</a>
+</li>
+      <li><a href="absfuyu.util.html#absfuyu.util.shorten_number.Decimal.suffix">suffix (absfuyu.util.shorten_number.Decimal attribute)</a>
+</li>
+      <li><a href="absfuyu.util.html#absfuyu.util.shorten_number.Decimal.suffix_full_name">suffix_full_name (absfuyu.util.shorten_number.Decimal attribute)</a>
+</li>
+      <li><a href="absfuyu.util.html#absfuyu.util.shorten_number.Decimal.suffixes">suffixes (absfuyu.util.shorten_number.Decimal attribute)</a>
 </li>
       <li><a href="absfuyu.tools.html#absfuyu.tools.stats.ListStats.summary">summary() (absfuyu.tools.stats.ListStats method)</a>
 </li>
@@ -1377,6 +1450,8 @@
       <ul>
         <li><a href="absfuyu.general.html#absfuyu.general.content.LoadedContent.to_text">(absfuyu.general.content.LoadedContent method)</a>
 </li>
+        <li><a href="absfuyu.util.html#absfuyu.util.shorten_number.Decimal.to_text">(absfuyu.util.shorten_number.Decimal method)</a>
+</li>
       </ul></li>
       <li><a href="absfuyu.util.html#absfuyu.util.path.SaveFileAs.to_txt">to_txt() (absfuyu.util.path.SaveFileAs method)</a>
 </li>
@@ -1396,6 +1471,8 @@
 </li>
       <li><a href="absfuyu.general.html#absfuyu.general.data_extension.ListExt.unique">unique() (absfuyu.general.data_extension.ListExt method)</a>
 </li>
+      <li><a href="absfuyu.util.html#absfuyu.util.shorten_number.UnitSuffixFactory">UnitSuffixFactory (class in absfuyu.util.shorten_number)</a>
+</li>
       <li><a href="absfuyu.tools.html#absfuyu.tools.converter.Text2Chemistry.unvailable_characters">unvailable_characters (absfuyu.tools.converter.Text2Chemistry property)</a>
 </li>
       <li><a href="absfuyu.util.html#absfuyu.util.zipped.Zipper.unzip">unzip() (absfuyu.util.zipped.Zipper method)</a>
@@ -1414,6 +1491,8 @@
         <li><a href="absfuyu.util.html#absfuyu.util.json_method.JsonFile.update_data">(absfuyu.util.json_method.JsonFile method)</a>
 </li>
       </ul></li>
+      <li><a href="absfuyu.game.html#absfuyu.game.game_stat.GameStats.update_score">update_score() (absfuyu.game.game_stat.GameStats method)</a>
+</li>
       <li><a href="absfuyu.game.html#absfuyu.game.wordle.Wordle.update_words">update_words() (absfuyu.game.wordle.Wordle method)</a>
 </li>
       <li><a href="absfuyu.general.html#absfuyu.general.data_extension.TextAnalyzeDictFormat.uppercase">uppercase (absfuyu.general.data_extension.TextAnalyzeDictFormat attribute)</a>
@@ -1427,11 +1506,15 @@
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="absfuyu.util.html#absfuyu.util.performance.Checker.value">value (absfuyu.util.performance.Checker property)</a>
+
+      <ul>
+        <li><a href="absfuyu.util.html#absfuyu.util.shorten_number.Decimal.value">(absfuyu.util.shorten_number.Decimal attribute)</a>
 </li>
-      <li><a href="absfuyu.tools.html#absfuyu.tools.stats.ListStats.var">var() (absfuyu.tools.stats.ListStats method)</a>
-</li>
+      </ul></li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="absfuyu.tools.html#absfuyu.tools.stats.ListStats.var">var() (absfuyu.tools.stats.ListStats method)</a>
+</li>
       <li><a href="absfuyu.html#absfuyu.version.Version.version">version (absfuyu.version.Version property)</a>
 </li>
       <li><a href="absfuyu.html#absfuyu.version.Version">Version (class in absfuyu.version)</a>
@@ -1448,9 +1531,13 @@
 </li>
       <li><a href="absfuyu.fun.html#absfuyu.fun.WGS.WGS">WGS (class in absfuyu.fun.WGS)</a>
 </li>
+      <li><a href="absfuyu.html#absfuyu.core.CLITextColor.WHITE">WHITE (absfuyu.core.CLITextColor attribute)</a>
+</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="absfuyu.html#absfuyu.core.CLITextColor.WHITE">WHITE (absfuyu.core.CLITextColor attribute)</a>
+      <li><a href="absfuyu.game.html#absfuyu.game.game_stat.GameStats.win">win (absfuyu.game.game_stat.GameStats attribute)</a>
+</li>
+      <li><a href="absfuyu.game.html#absfuyu.game.game_stat.GameStats.win_rate">win_rate (absfuyu.game.game_stat.GameStats attribute)</a>
 </li>
       <li><a href="absfuyu.game.html#absfuyu.game.wordle.Wordle">Wordle (class in absfuyu.game.wordle)</a>
 </li>
